--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,15 @@
     />
 
     <style>
+      :root {
+        --primary: #c8a97e;
+        --primary-dark: #ad7322;
+        --primary-light: #decbaf;
+        --dark: #262626;
+        --gray: #7b7b7b; /*#9d9d9d*/
+        --gray-light: #d9d9d9; /*#c4c4c4*/
+        --light: #f5f5f5;
+      }
       body {
         overflow-x: hidden;
       }
@@ -58,6 +67,11 @@
     <!-- Inconsolata -->
     <link
       href="https://fonts.googleapis.com/css2?family=Inconsolata&display=swap"
+      rel="stylesheet"
+    />
+    <!-- Great Vibes -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap"
       rel="stylesheet"
     />
     <title>Rohan Raj Desk</title>
